# osep_simulation_environment

./: .gitignore  CMakeLists.txt  README.md  launch_pegasus.sh  package.xml
include/: osep_communicator.hpp  pid_controller.hpp  px4_msg_converter.hpp  px4_msg_converter_node.hpp  px4_offboard_control.hpp  px4_vel_controller.hpp
launch/: px4_bridge.launch.py
msg/: Action.msg
scripts/: docker_env_setup.sh
src/: osep_communicator_node.cpp  px4_bridge.cpp  px4_msg_converter_node.cpp  px4_offboard_control.cpp  px4_vel_controller.cpp
src/testing/: converter_test.py
